--- a/src/main/webapp/manage_car.html
+++ b/src/main/webapp/manage_car.html
@@ -16,10 +16,15 @@
         </header>
         <div id="topBar">
             <div id="pageTitle">Auto uitleen app</div>
-            <div id="accIcon">
-                <img id="userIconImg" src="images/user-icon.png" alt="">
+            <div id="accName" class="dropdown">
+                <span id="accountNameLabel">Account Name</span>
+                <div id="accIcon">
+                    <img id="userIconImg" src="images/user-icon.png" alt="">
+                </div>
+                <div class="dropdown-content">
+                    <p id="logOutButton">Log out</p>
+                </div>
             </div>
-            <div id="accName">Account Name</div>
         </div>
         <div id="navBox">
             <br><br>
@@ -66,6 +71,8 @@
             }
 
             function initPage(){
+            	document.getElementById("accountNameLabel").innerHTML = window.sessionStorage.currentUsername;
+            	document.querySelector("#logOutButton").addEventListener("click", logout);
                 loadAcceptPending();
                 loadPaidPending();
             }
@@ -254,6 +261,12 @@
                     })
                 .catch(error => console.log(error))
                 );
+            }
+            
+            function logout(){
+            	sessionStorage.removeItem("myJWT");
+            	window.location.href = "./index.html";
+            	
             }
 
             document.getElementById("pageTitle").innerHTML = window.sessionStorage.selectedCarModel + " beheren"
