--- a/src/main/webapp/register_kilometers.html
+++ b/src/main/webapp/register_kilometers.html
@@ -16,10 +16,15 @@
         </header>
         <div id="topBar">
             <div id="pageTitle">Auto uitleen app</div>
-            <div id="accIcon">
-                <img id="userIconImg" src="images/user-icon.png" alt="">
+            <div id="accName" class="dropdown">
+                <span id="accountNameLabel">Account Name</span>
+                <div id="accIcon">
+                    <img id="userIconImg" src="images/user-icon.png" alt="">
+                </div>
+                <div class="dropdown-content">
+                    <p id="logOutButton">Log out</p>
+                </div>
             </div>
-            <div id="accName">Account Name</div>
         </div>
 
         <div class="infoBar" id="paidPendingBar">
@@ -60,6 +65,8 @@
             }
 
             function initPage(){
+            	document.getElementById("accountNameLabel").innerHTML = window.sessionStorage.currentUsername;
+            	document.querySelector("#logOutButton").addEventListener("click", logout);
                 loadSessions();
             }
 
@@ -167,6 +174,12 @@
             	window.sessionStorage.setItem("selectedSessionId", sessionId);
             	document.getElementById("kilometersLabel").innerHTML = "Kilometerstand voor " + model;
                 console.log(sessionId);
+            }
+            
+            function logout(){
+            	sessionStorage.removeItem("myJWT");
+            	window.location.href = "./index.html";
+            	
             }
 
             document.getElementById("pageTitle").innerHTML = "Registreer kilomterstand voor een geaccepteerde reservering"
