login default  values removed

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,11 +31,11 @@
             <form id="loginform">
                 <div class="propertyRow">
                     <label class="varNameLabel">Gebruikersnaam:</label>
-                    <input type="text" name="username" id="usernameEntry" value="sa@site.com">
+                    <input type="text" name="username" id="usernameEntry">
                 </div>
                 <div class="propertyRow" id="passwordPropertyRow">
                     <label class="varNameLabel">Wachtwoord: </label>
-                    <input type="password" name="password" id="passwordEntry" value="asdf">
+                    <input type="password" name="password" id="passwordEntry">
                 </div>
                 <div class="propertyRow">
                         <label class="varNameLabel"></label>
