--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
             <div id="pageTitle">Auto uitleen app</div>
             
             <div id="accName" class="dropdown">
-                <span id="accountNameLabel">Account Name</span>
+                <span id="accountNameLabel">Not signed in</span>
                 <div id="accIcon">
                     <img id="userIconImg" src="images/user-icon.png" alt="">
                 </div>
